# bot-shop

./: .gitignore  bot.js  run.sh
.cargo/: config  config.toml
AI-cessible-server/: Cargo.toml
AI-cessible-server/.cargo/: config.toml
AI-cessible-server/src/: bot_detection.rs  bot_schema.rs  main.rs  schema.rs  tests.rs
AI-cessible-server/static/: asset-manifest.json  index.html
AI-cessible-server/static/static/css/: main.44db6fb7.css  main.44db6fb7.css.map
AI-cessible-server/static/static/js/: main.3db15e45.js  main.3db15e45.js.map  main.94839789.js  main.94839789.js.map  main.ad22d60c.js  main.ad22d60c.js.map
AI-cessible-server/tmp/: .gitkeep
docs/: mcp-example-prompt.md  openapi.yaml  project-brief.md  repository-overview.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  botDetection.js  index.css  index.js
mcp-server/: README.md  package.json  server.js
simulate-bot/: README.md  bot.js  comparison-bot-l2.js  comparison-bot.js  flight-comparison.txt  l2-api-bot.js  package-lock.json  package.json
tmp/: .gitkeep  xcrun_db
