[package]
name = "AI-cessible-server"
version = "0.1.0"
edition = "2024"

 [dependencies]
 tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
 axum = { version = "0.8", features = ["json"] }

# GraphQL
async-graphql = "7"
async-graphql-axum = "7"
async-trait = "0.1"

# Database: SQLx with SQLite
sqlx = { version = "0.6", features = ["sqlite", "macros", "runtime-tokio-rustls"] }

# Static file serving and HTTP utilities
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
